# ts-template

./: .editorconfig  .gitignore  AGENTS.md  lint-staged.config.mjs  package.json  turbo.jsonc
.claude/: iranti-edit-tracker-hook.js  iranti-protocol-hook.js  iranti-write-guard-hook.js
.githooks/: commit-msg
.github/workflows/: db_migrate.yml  ghcr.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
backend/: .env.example  biome.json  package.json  tsconfig.json
backend/src/: env.ts  generateOpenApi.ts  main.ts  server.ts
backend/src/modules/example/: errors.ts  index.ts
backend/src/modules/example/dtos/: index.ts
backend/src/shared/errors/: DomainError.ts
backend/src/shared/infra/: betterAuth.ts
backend/src/shared/types/: index.ts  pagination.ts  sorting.ts
frontend/: .env.example  biome.json  index.html  kubb.config.ts  package.json  scripts.ts  tsconfig.node.json  vite.config.ts
frontend/src/: globals.css  main.tsx  providers.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx
frontend/src/i18n/: config.ts  types.d.ts
frontend/src/i18n/locales/: en-US.json
frontend/src/lib/: requestLocation.ts
frontend/src/lib/api/: client-api.ts  index.ts
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/routes/components/: AuthExampleCard.tsx  HeroSection.tsx  PatternCard.tsx
frontend/src/stores/: auth.ts  index.ts
(+17 files in other folders)
